# qync

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  FindGLIB.cmake  qync.cpp  qync.pro
core/: QyncLoginManager.cpp  QyncLoginManager.h  QyncSipe.cpp  QyncSipe.h
qync/: qync.cpp  qync.pro
qync/core/: QyncBuddy.cpp  QyncBuddy.h  QyncBuddyListModel.cpp  QyncBuddyListModel.h  QyncCategoryListModel.cpp  QyncCategoryListModel.h  QyncDB.cpp  QyncDB.h  QyncGroup.cpp  QyncGroup.h  QyncSipeCore.cpp  QyncSipeCore.h  QyncUtils.cpp  QyncUtils.h
qync/qml/: BuddyItem.qml  BuddyListItem.qml  BuddyListView.qml  BuddyWidget.qml  LoginView.qml  LoginWaitingView.qml  Main.qml  QyncApp.qml  qml.qrc
sipe-qync/: QyncBackend.cpp  QyncBackend.h  QyncBuddyListModel.cpp  QyncBuddyObject.h  QyncDB.h  QyncLoginManager.cpp  QyncLoginManager.h  QyncSipe.cpp  QyncSipe.h  QyncSipeConnection.cpp  QyncSipeDebug.cpp  QyncSipeDnsQuery.cpp  QyncSipeGroupChat.cpp  QyncSipeIm.cpp  QyncSipeSchedule.cpp  QyncSipeSetting.cpp  QyncSipeStatus.cpp  QyncSipeTransport.cpp  QyncSipeUtils.cpp  sipe-qync-buddy.c  sipe-qync-chat.c  sipe-qync-connection.c  sipe-qync-ft.c  sipe-qync-groupchat.c  sipe-qync-im.c  sipe-qync-main.c  sipe-qync-markup.c  sipe-qync-notify.c  sipe-qync-search.c  sipe-qync-setting.c  sipe-qync-status.c  sipe-qync-user.c  sipe-qync.pro  sipe-qync_global.h
sipe-qync/inc/: QyncBackend.h  QyncBuddyObject.h  QyncGroupObject.h  QyncSipe.h
sipe-qync/src/: QyncBackend.cpp  QyncBuddyObject.cpp  QyncDB.cpp  QyncGroupObject.cpp  QyncSipe.cpp  QyncSipeBuddy.cpp  QyncSipeChat.cpp  QyncSipeConnection.cpp  QyncSipeDebug.cpp  QyncSipeDnsQuery.cpp  QyncSipeFt.cpp  QyncSipeGroupChat.cpp  QyncSipeIm.cpp  QyncSipeMain.cpp  QyncSipeMarkup.cpp  QyncSipeNetwork.cpp  QyncSipeNotify.cpp  QyncSipeSchedule.cpp  QyncSipeSearch.cpp  QyncSipeSetting.cpp  QyncSipeStatus.cpp  QyncSipeTransport.cpp  QyncSipeUser.cpp  QyncSipeUtils.cpp  QyncSipeUtils.h
ui/: Login.qml  QyncApp.qml  qync-ui.qmlproject
